added View All Posts functionality

--- a/Tabloid/client/src/index.css
+++ b/Tabloid/client/src/index.css
@@ -17,9 +17,19 @@ p {
     white-space: pre-wrap;
 }
 
-
 .post_list_header {
   font-weight: bold;
   display: flex;
   justify-content: space-between;
+}
+
+.post-list-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+.post-left,.post-center,.post-right {
+flex-basis: 33%;
 }
